# discord-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  environement.py  main.py  pyproject.toml
Cogs/: embedscreation.py  moderation.py
api/: Dockerfile.dev
cogs/: adcreator.py  embedscreation.py  moderation.py  social.py  youtube.py
infrastructure/services/: cog_loader.py  logger_service.py
panel/: package-lock.json  package.json
