[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Alexis Chân Gridel", email = "alexis.gridel@pm.me" }]
license = { text = "GPL 3.0" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["discord-py (>=2.4.0,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
black = "^24.10.0"
pre-commit = "^4.0.1"

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88

[tool.black]
line-length = 88
